✨ Renaming and readying for deploy

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/sicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#1b1523" />
     <meta
       name="description"
       content="Web Memory Game created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Magic Match</title>
+    <title>Dungeon Match</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
